--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,50 +1,53 @@
+body {
+background-color: grey;
+}
 .cantor{
         color: black;
-        text-align: center;
+        text-align: left;
     	}
 
 .musica{
         color: black;
-        text-align: center;
+        text-align: left;
     	}
 
 .letra{
         color: black;
-        text-align: center;
+        text-align: left;
     	}
 
 .estrofe1{
         color: red;
-        text-align: center;
+        text-align: left;
     	}
 
 .estrofe2{
         color: orange;
-        text-align: center;
+        text-align: left;
     	}
 
 .estrofe3{
         color: yellow;
-        text-align: center;
+        text-align: left;
     	}
 
 .estrofe4{
         color: green;
-        text-align: center;
+        text-align: left;
     	}
 
 .estrofe5{
         color: blue;
-        text-align: center;
+        text-align: left;
     	}
 .estrofe6{
         color: indigo;
-        text-align: center;
+        text-align: left;
     	}
 
 .estrofe7{
         color: violet;
-        text-align: center;
+        text-align: left;
     	}
 
 .video{
